added ability to edit rows and fix bugs

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-saga": "^1.2.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
